--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -81,7 +81,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 35vw;
+    min-width: 40vw;
 }
 
 header .link {
